--- a/pom.xml
+++ b/pom.xml
@@ -75,8 +75,11 @@
 		</dependency>
 		
 		<!-- https://mvnrepository.com/artifact/com.oracle/ojdbc14 -->
-
-		
+<dependency>
+     <groupId>com.oracle</groupId>
+     <artifactId>ojdbc6</artifactId>
+     <version>11.1.0</version>
+ </dependency>
 
       	<!-- Joda-Time -->		
 		<dependency>
