--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,13 @@
 		<h2.version>1.4.187</h2.version>
 		<dbunit.version>2.2</dbunit.version>
 	</properties>
+	
+	<repositories>
+	<repository>
+	<id>Internal Repo</id>
+	<url>file://${basedir}/lib</url>
+	</repository>
+	</repositories>
 
 	<dependencies>
 		<!-- Spring -->
@@ -146,7 +153,7 @@
 		</dependency>
 		
 	</dependencies>
-
+	
 	<build>
 		<pluginManagement>
 			<plugins>
@@ -154,6 +161,7 @@
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-war-plugin</artifactId>
 					<version>2.4</version>
+					
 					<configuration>
 						<warSourceDirectory>src/main/webapp</warSourceDirectory>
 						<warName>SpringHibernateExample</warName>
